fix: Fix grid gap value

--- a/react/Labs/IconGrid/styles.styl
+++ b/react/Labs/IconGrid/styles.styl
@@ -2,4 +2,4 @@
     display grid
     grid-template-columns repeat(2, 16px)
     grid-template-rows repeat(2, 16px)
-    grid-gap rem(1)
+    grid-gap 1px
